--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,9 @@ body {
   overflow: overlay;
 }
 
-body.modalActive { overflow: hidden; }
+body.modalActive {
+  overflow: hidden;
+}
 
 ::-webkit-scrollbar { width: 8px; }
 
